--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "json-to-table",
+  "name": "@sciphergfx/json-to-table",
   "version": "1.0.0",
-  "description": "A comprehensive JSON utilities suite featuring JSON to Table converter and JSON to Form Fields generator",
+  "description": "UI-agnostic React components for JSON to Table and JSON to Form Fields conversion with support for Chakra UI, Tailwind CSS, and shadcn/ui",
   "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "author": {
     "name": "Seyi K. Ogunbowale"
   },
@@ -15,8 +18,12 @@
     "converter",
     "react",
     "chakra-ui",
+    "tailwind",
+    "shadcn",
     "json-to-table",
-    "json-to-form"
+    "json-to-form",
+    "ui-agnostic",
+    "components"
   ],
   "homepage": "https://github.com/sciphergfx/json-to-table",
   "repository": {
@@ -32,7 +39,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build:lib",
+    "build:app": "vite build",
+    "build:lib": "rollup -c",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -45,7 +54,7 @@
   },
   "files": [
     "dist",
-    "src",
+    "lib",
     "README.md",
     "LICENSE",
     "package.json"
@@ -54,14 +63,22 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
+  "optionalDependencies": {
     "@chakra-ui/react": "^3.24.2",
-    "@emotion/react": "^11.14.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@emotion/react": "^11.14.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.32.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
@@ -69,6 +86,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "rollup": "^4.46.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "vite": "^7.1.0"
   }
 }
