--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sciphergfx/json-to-table",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "UI-agnostic React components for JSON to Table and JSON to Form Fields conversion with support for Chakra UI, Tailwind CSS, and shadcn/ui",
   "private": false,
   "main": "dist/index.js",
@@ -90,6 +90,7 @@
     "react-dom": "^19.1.1",
     "rollup": "^4.46.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "util-inspect": "^0.1.8",
     "vite": "^7.1.0"
   }
 }
