refactor: ui polish

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run build:lib",
+    "build:stats": "rollup -c",
     "build:app": "vite build",
     "build:lib": "rollup -c",
     "preview": "vite preview",
@@ -89,6 +90,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "gzip-size": "^7.0.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
