--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Application Configuration
-VITE_APP_NAME=JSON Tools Suite
+VITE_APP_NAME=JSON Fields
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENVIRONMENT=production
 
