--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ VITE_APP_ENVIRONMENT=production
 VITE_ENABLE_ANALYTICS=false
 VITE_ENABLE_ERROR_REPORTING=false
 
+# GitHub Repository (for header/stats)
+VITE_GITHUB_REPO_OWNER=sciphergfx
+VITE_GITHUB_REPO_NAME=json-fields
+
 # API Configuration (if needed in future)
 # VITE_API_URL=https://api.example.com
 
