--- a/package.json
+++ b/package.json
@@ -66,13 +66,17 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "unpkg": "dist/json-fields.umd.min.js",
+  "jsdelivr": "dist/json-fields.umd.min.js",
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
-  "optionalDependencies": {
+    "react-dom": ">=16.8.0",
     "@chakra-ui/react": "^3.24.2",
     "@emotion/react": "^11.14.0"
+  },
+  "peerDependenciesMeta": {
+    "@chakra-ui/react": { "optional": true },
+    "@emotion/react": { "optional": true }
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
@@ -97,7 +101,9 @@
     "rollup": "^4.46.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "util-inspect": "^0.1.8",
-    "vite": "^7.1.0"
+    "vite": "^7.1.0",
+    "@chakra-ui/react": "^3.24.2",
+    "@emotion/react": "^11.14.0"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0"
