--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
   "unpkg": "dist/json-fields.umd.min.js",
   "jsdelivr": "dist/json-fields.umd.min.js",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
     "@chakra-ui/react": "^3.24.2",
-    "@emotion/react": "^11.14.0"
+    "@emotion/react": "^11.14.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "peerDependenciesMeta": {
     "@chakra-ui/react": {
@@ -85,29 +85,33 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
+    "@chakra-ui/react": "^3.24.2",
+    "@emotion/react": "^11.14.0",
     "@eslint/js": "^9.32.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "gzip-size": "^7.0.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rollup": "^4.46.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tailwindcss": "^4.1.12",
     "util-inspect": "^0.1.8",
-    "vite": "^7.1.0",
-    "@chakra-ui/react": "^3.24.2",
-    "@emotion/react": "^11.14.0"
+    "vite": "^7.1.0"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0"
